# File_Deduplicator_Rust

./: .gitignore  README.md
file_deduplicator/: Cargo.toml  report.html  report.json
file_deduplicator/src/: cli.rs  filter.rs  group.rs  hash.rs  lib.rs  main.rs  model.rs  quarantine.rs  report.rs  scan.rs
file_deduplicator/tests/: tests.rs
